--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="hero-body">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
-        <source src="static/videos/clean_rec.mp4"
+        <source src="static/videos/s_ood1_s.mp4"
         type="video/mp4">
       </video>
       <!-- <h2 class="subtitle has-text-centered">
@@ -139,7 +139,7 @@
     <div class="hero-body">
         <video poster="" id="tree" autoplay controls muted loop height="100%">
           <!-- Your video here -->
-          <source src="static/videos/ooc_rec.mp4"
+          <source src="static/videos/s_ood2_s.mp4"
           type="video/mp4">
         </video>
         <!-- <h2 class="subtitle has-text-centered">
