--- a/index.html
+++ b/index.html
@@ -127,14 +127,15 @@
 <section class="hero teaser">
   <div class="container is-max-desktop">
 
-    <!-- 1) Image above the videos -->
-    <div class="has-text-centered mb-5">
-      <figure class="image is-4by3 is-inline-block">
-        <img src="static/images/overall_flow.png" alt="Descriptive Alt Text">
-      </figure>
+    <!-- DEBUG IMAGE: will show a light-gray box with a red border if the src is wrong -->
+    <div class="has-text-centered mb-5" style="background: #f5f5f5; padding: 1rem;">
+      <img
+        src="/static/images/overall_flow.png"
+        alt="Descriptive Alt Text"
+        style="max-width: 600px; width: 100%; height: auto; border: 2px solid red;"
+      >
     </div>
 
-    <!-- 2) Videos side by side -->
     <div class="columns is-variable is-4">
       <div class="column">
         <video
@@ -143,7 +144,7 @@
           muted
           loop
           controls
-          style="width: 100%; height: auto;">
+          style="width: auto; height: auto;">
         </video>
       </div>
       <div class="column">
@@ -153,13 +154,14 @@
           muted
           loop
           controls
-          style="width: 100%; height: auto;">
+          style="width: auto; height: auto;">
         </video>
       </div>
     </div>
 
   </div>
 </section>
+
 
 
 <!-- Paper abstract -->
