--- a/index.html
+++ b/index.html
@@ -129,11 +129,7 @@
 
     <!-- DEBUG IMAGE: will show a light-gray box with a red border if the src is wrong -->
     <div class="has-text-centered mb-5" style="background: #f5f5f5; padding: 1rem;">
-      <img
-        src="/static/images/overall_flow.png"
-        alt="Descriptive Alt Text"
-        style="max-width: 600px; width: 100%; height: auto; border: 2px solid red;"
-      >
+      <img src="static/images/overall_flow.png" alt="MY ALT TEXT"/>
     </div>
 
     <div class="columns is-variable is-4">
