--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 
 <section class="section">
   <div class="container">
-    <h2 class="title is-4">Simulation Environment Task Failing</h2>
+    <h2 class="title is-4">Simulation Environment Task Failures</h2>
     <div class="columns is-multiline is-variable is-2">
 
       <!-- Video 1 -->
