grid video of sim success

--- a/index.html
+++ b/index.html
@@ -334,6 +334,63 @@
   </div>
 </section>
 
+<section class="section">
+  <div class="container">
+    <h2 class="title is-4">Simulation Environment Task Success Using Safe Recovery</h2>
+    <div class="columns is-multiline is-variable is-2">
+
+      <!-- Video 1 -->
+      <div class="column is-one-quarter-desktop is-half-tablet">
+        <div class="video-item">
+          <video
+            src="static/videos/s_base_s.mp4"
+            autoplay muted loop controls>
+          </video>
+          <div class="caption">Base Success Case</div>
+        </div>
+      </div>
+
+      <!-- Video 2 -->
+      <div class="column is-one-quarter-desktop is-half-tablet">
+        <div class="video-item">
+          <video
+            src="static/videos/s_ood1_s.mp4"
+            autoplay muted loop controls>
+          </video>
+          <div class="caption">
+            Succeeding the task even when OOD1 is present.
+          </div>
+        </div>
+      </div>
+
+      <!-- Video 3 -->
+      <div class="column is-one-quarter-desktop is-half-tablet">
+        <div class="video-item">
+          <video
+            src="static/videos/s_ood2_s.mp4"
+            autoplay muted loop controls>
+          </video>
+          <div class="caption">Succeeding the task even when OOD2 is present.
+          </div>
+        </div>
+      </div>
+
+      <!-- Video 4 -->
+      <div class="column is-one-quarter-desktop is-half-tablet">
+        <div class="video-item">
+          <video
+            src="static/videos/s_ood3_s.mp4"
+            autoplay muted loop controls>
+          </video>
+          <div class="caption">Succeeding the task even when both OOD1 and OOD2 are present.
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</section>
+
 
 
 
